code25_all/scala/8533201.txt
sealed abstract class Option[+A] extends Product with Serializable {
  self =>

scala> trait A
defined trait A

scala> trait NeedA {self: A =>}
defined trait NeedA

scala> new NeedA {}
<console>:10: error: illegal inheritance;
 self-type java.lang.Object with NeedA does not conform to NeedA's selftype NeedA with A
              new NeedA {}
                  ^

scala> new NeedA with A {}
res39: java.lang.Object with NeedA with A = $anon$1@4d04a0e8

scala>

